# Agents

./: .gitignore  README.md  compose.yml  pyproject.toml  requirements.txt  run_app.sh
backend/: .dockerignore  Dockerfile  requirements.txt  server.py
backend/data/: ref_dict_01.xlsx  ref_ship_fuel.xlsx  schema_desc.xlsx
backend/routers/: arxiv.py  generate.py  hybrid_search.py  ppt_maker.py  refine.py  schedule.py  sql_agent.py  stream_agent.py  web.py  wiki.py
backend/utils/: schedule_helper.py  schedule_helper_v2.py
frontend/: Dockerfile  app.py  requirements.txt
frontend/assets/: style.css
frontend/pages/: 01_Schedule_Agent.py  02_RagAgent_Multi.py  03_MCP_Agent.py  04_sql_agent.py  05_stream_agent.py  06_pptx_maker.py
notebook/: provence.ipynb  provence.py  schedule.ipynb  test_mcp_client.ipynb
