[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "elasticsearch>=9.1.1",
    "fastapi[standard]>=0.120.0",
    "langchain-mcp-adapters>=0.1.11",
    "langgraph>=1.0.1",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
]
